[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "cyberpunk-radio-simulator"
version = "0.0.0"
description = "Play Cyberpunk 2077 radios in your terminal, with jingles, DJs and adverts."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.urls]
Homepage = "https://github.com/domdfcoding/cyberpunk-radio-simulator"
"Issue Tracker" = "https://github.com/domdfcoding/cyberpunk-radio-simulator/issues"
"Source Code" = "https://github.com/domdfcoding/cyberpunk-radio-simulator"

[project.scripts]
radioport = "cyberpunk_radio_simulator.__main__:main"

[tool.whey]
base-classifiers = []
python-versions = [ "3.10", "3.11", "3.12",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "cyberpunk_radio_simulator"

[tool.importcheck]

[tool.mypy]
python_version = "3.10"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]
