[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "cyberpunk-radio-simulator"
version = "0.0.0"
description = "Play Cyberpunk 2077 radios in your terminal, with jingles, DJs and adverts."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.urls]
Homepage = "https://github.com/domdfcoding/cyberpunk-radio-simulator"
"Issue Tracker" = "https://github.com/domdfcoding/cyberpunk-radio-simulator/issues"
"Source Code" = "https://github.com/domdfcoding/cyberpunk-radio-simulator"

[project.scripts]
radioport = "cyberpunk_radio_simulator.__main__:main"

[project.optional-dependencies]
wrapper = [
    'pygobject==3.50.0; platform_system == "Linux"',
    'textual-wrapper[gtk]>=0.4.0; platform_system == "Linux"',
]
all = [
    'pygobject==3.50.0; platform_system == "Linux"',
    'textual-wrapper[gtk]>=0.4.0; platform_system == "Linux"',
]

[tool.whey]
base-classifiers = []
python-versions = [ "3.10", "3.11", "3.12",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "cyberpunk_radio_simulator"

[tool.importcheck]
always = [
    "cyberpunk_radio_simulator",
    "cyberpunk_radio_simulator.media_control",
    "cyberpunk_radio_simulator.__main__",
    "cyberpunk_radio_simulator.config",
    "cyberpunk_radio_simulator.data",
    "cyberpunk_radio_simulator.events",
    "cyberpunk_radio_simulator.extractor",
    "cyberpunk_radio_simulator.gui",
    "cyberpunk_radio_simulator.logos",
    "cyberpunk_radio_simulator.notifications",
    "cyberpunk_radio_simulator.simulator",
    "cyberpunk_radio_simulator.widgets",
]

[tool.mypy]
python_version = "3.10"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]

[tool.dep_checker]
allowed_unused = [
    "winrt_windows_media",
    "winrt_windows_media_core",
    "winrt_windows_media_playback",
    "winrt_windows_ui_notifications",
]

[tool.dep_checker.name_mapping]
pillow = "PIL"

[tool.pyright]
reportMissingModuleSource = false
